# app/resources/session.py
@@ -1,3 +1,4 @@
+from flask import session
 from flask_login import current_user, login_required, login_user, logout_user
 from flask_restful import Resource, abort, marshal_with
 
@@ -15,6 +16,8 @@ class ResourceSession(Resource):
     @marshal_with(user_field)
     def post(self):
         args = session_parser.parse_args()
+        if args["captcha"].lower() != session.get("captcha", "").lower():
+            abort(400, message="Captcha wrong")
         user = User.get_by_username(args["username"])
         if user is None or user.check_password(args["password"]) is not True:
             abort(400, message="Username or password wrong")
